Bug Fixes on Stats Page
Fixed IndexHero not covering entire screen. Modified button on index
page. Changed colors of See More button.

--- a/Brotherhood Revised/css/stats.css
+++ b/Brotherhood Revised/css/stats.css
@@ -59,6 +59,9 @@
 .stats.right {
     float: right;
     text-align: right;
+    max-height: 40px;
+    overflow-y: hidden;
+    overflow-x: scroll;
 }
 
 
